# hawaii-workspace

./: CMakeLists.txt  README.md
data/: CMakeLists.txt
data/services/: CMakeLists.txt  org.hawaiios.Screencast.service.in  org.hawaiios.Screenshot.service.in
polkitagent/qml/: authdialog.qml
screencast/: CMakeLists.txt  main.cpp  screencast.cpp
screenshot/: CMakeLists.txt  org.hawaiios.Screenshot.desktop.in  screenshooter.cpp  screenshooter.h
screenshot/qml/: main.qml
